<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">TLS Client - Session overview</string>
    <string name="settings">Settings</string>
    <string name="about">About</string>
    <string name="hosts_default">
        <xliff:g>hosts_default</xliff:g>
    </string>
    <string name="hosts_additional">
        <xliff:g>hosts_additional</xliff:g>
    </string>
    <string name="result">Results</string>
    <string name="target">Target Host</string>
    <string name="target_default">141.40.254.119</string>
    <string name="hosts_default_title">Default hosts</string>
    <string name="hosts_default_description">Which hosts do we probe?</string>
    <string name="hosts_additional_title">Additional hosts</string>
    <string name="hosts_additional_description">Additional hosts for probing can be specified here. Each host must be specified in a new line.</string>
    <string name="title_activity_result_view">Test report</string>
    <string name="text_no_results">No results yet.</string>
    <string name="title_activity_progress">Test in progress</string>
    <string name="title_activity_session_view">Test overview</string>
    <string name="tls_version">TLS-Version:</string>
</resources>
